# cpp-image-processing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: DocumentScanner.cpp  DocumentScanner.hpp  LicensePlateRecognition.cpp  LicensePlateRecognition.hpp  VirtualPaint.cpp  main.cpp
src/impl/: Common.cpp  DocumentScanner.cpp  LicensePlateRecognition.cpp  Other.cpp  VirtualPaint.cpp
src/interface/: Common.hpp  Other.hpp  VirtualPaint.hpp
